<resources>
    <string name="app_name">My Application</string>
    <string name="add_settings">Ajouter</string>
    <string name="quit_settings">Quitter</string>
    <string name="action_delete">Supprimer</string>
    <string name="action_edit">Editer</string>
    <string name="regenerate_Lab">Regénerer le labyrinthe</string>
    <string name="editLevel">Editeur de niveau</string>
    <string name="playButton">Jouer</string>
    <string name="levelname">LevelName</string>
    <string name="fin_du_jeu">Vous avez gagné!</string>
    <string name="score">Score</string>
    <string name="name">Name</string>
    <string name="gravity_ball">GRAVITY BALL</string>
    <string name="title">title</string>
    <string name="size">size</string>
</resources>