<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondprincipale"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/regenerateLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regenerate_Lab"
        app:layout_constraintTop_toBottomOf="@id/textFieldLevelName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="regenerateButton"
 />

    <Button
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit_settings"
        android:onClick="quitEditMode"
        app:layout_constraintTop_toBottomOf="@id/regenerateLab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
 />

    <TextView
        android:id="@+id/editLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editLevel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/textFieldLevelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/levelname"
        app:layout_constraintTop_toBottomOf="@id/editLevel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>